--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mindloom",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "formik": "^2.4.6",
+    "hamburger-react": "^2.5.2",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-markdown": "^9.0.3",
-    "zustand": "^5.0.3"
+    "remark-gfm": "^4.0.0",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.3",
+    "zustore": "^1.5.34"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
